--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "game",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
+    "@juggle/resize-observer": "^3.2.0",
     "@reduxjs/toolkit": "^1.2.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -47,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cypress": "^5.0.0"
   }
 }
